# nbry-website

./: .env  .env.example  .envrc  .gitignore  .prettierrc  DEVELOPMENT.md  LICENSE  Makefile  README.md  SUMMARY.md  demo_config_loader.py  package-lock.json  package.json  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  setup.sh
src/nbry_lifting_website/: app.py
src/nbry_lifting_website/configs/: exercises.toml  milestones.toml  progression.toml  rest.toml
src/nbry_lifting_website/configs/blocks/: accumulation.toml  deload.toml  intensification.toml
src/nbry_lifting_website/lib/: config_loader.py  models.py  program_builder.py
src/nbry_lifting_website/static/css/: main.css
src/nbry_lifting_website/static/js/: theme.js
src/nbry_lifting_website/templates/: base.html  changelog.html  faq.html  home.html  instructions.html  links.html  philosophy.html  resources.html
src/nbry_website/: __init__.py  config.py  main.py
src/nbry_website/shared/: __init__.py
src/nbry_website/shared/static/css/: base.css
src/nbry_website/sites/: __init__.py
src/nbry_website/sites/landing/: __init__.py  app.py
src/nbry_website/sites/landing/static/css/: main.css
src/nbry_website/sites/landing/templates/: index.html
src/nbry_website/sites/lifting/: __init__.py  app.py  routes.py
src/nbry_website/sites/lifting/configs/: calculation.toml  exercises.toml  program.toml  rounding.toml
src/nbry_website/sites/lifting/configs/3-day-program/: program.toml
src/nbry_website/sites/lifting/configs/346-program/: program.toml
src/nbry_website/sites/lifting/configs/355-program/: program.toml
src/nbry_website/sites/lifting/configs/4-day-program/: program.toml
src/nbry_website/sites/lifting/configs/455-program/: program.toml
src/nbry_website/sites/lifting/lib/: program_builder.py  program_utils.py
src/nbry_website/sites/lifting/templates/: 3-day-program.html  4-day-program.html  base.html  changelog.html  equipment.html  faq.html  getting-started.html  guide.html  home.html  how-it-works.html  instructions.html  philosophy.html  program-guide.html  program.html  resources.html
src/nbry_website/sites/mycareer/: __init__.py  app.py  routes.py
src/nbry_website/sites/mycareer/templates/: index.html
tests/: test_config_loader.py  test_program_utils.py
(+27 files in other folders)
