[project]
dependencies = [
  "fastapi>=0.136.1",
  "jinja2>=3.1.6",
  "psycopg2-binary>=2.9.12",
  "pydantic>=2.10.5",
  "python-dotenv>=1.2.2",
  "sqlalchemy>=2.0.49",
  "tomli-w>=1.1.0",
]
description = "A web application for the NBRY lifting program."
name = "nbry_lifting_website"
readme = "README.md"
requires-python = ">=3.14"
version = "0.1.0"

[dependency-groups]
dev = [
  "ipdb>=0.13.13",
  "pyright>=1.1.409",
  "pytest>=9.0.3",
  "ruff>=0.15.13",
  "uvicorn>=0.47.0",
]

[project.scripts]
my-script = "nbry_lifting_website.app:app"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["src/nbry_lifting_website"]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["I"] # Enable isort rules
