[project]
dependencies = [
  "fastapi>=0.136.1",
  "jinja2>=3.1.6",
  "psycopg2-binary>=2.9.12",
  "pydantic>=2.10.5",
  "pydantic-settings>=2.7.1",
  "python-dotenv>=1.2.2",
  "sqlalchemy>=2.0.49",
  "tomli-w>=1.1.0",
]
description = "Multi-site platform for NBRY content."
name = "nbry_website"
readme = "README.md"
requires-python = ">=3.14"
version = "0.1.0"

[dependency-groups]
dev = [
  "ipdb>=0.13.13",
  "pyright>=1.1.409",
  "pytest>=9.0.3",
  "ruff>=0.15.13",
  "uvicorn>=0.47.0",
]

[project.scripts]
nbry-web = "nbry_website.main:app"
nbry-lifting = "nbry_website.sites.lifting.app:app"
nbry-landing = "nbry_website.sites.landing.app:app"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["src/nbry_website"]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["I"] # Enable isort rules
